--- a/deployments/terraform/website/values_template.yaml
+++ b/deployments/terraform/website/values_template.yaml
@@ -19,12 +19,12 @@ ingress:
   enabled: true
   annotations:
     kubernetes.io/ingress.class: nginx
-    cert-manager.io/cluster-issuer: letsencrypt-fuchicorp-prod
+    cert-manager.io/cluster-issuer: letsencrypt-tubaloughlin-prod
   path: /
   hosts:
     - ${deployment_endpoint}
   tls:
-   - secretName: fuchicorp-website-tls
+   - secretName: tubaloughlin-website-tls
      hosts:
        - ${deployment_endpoint}
 
